--- a/app/src/main/res/layout/item_location_search.xml
+++ b/app/src/main/res/layout/item_location_search.xml
@@ -8,7 +8,7 @@
     android:layout_marginVertical="4dp"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
+    android:foreground="@drawable/ripple_primary"
     app:cardCornerRadius="8dp"
     app:cardElevation="2dp"
     app:cardUseCompatPadding="true">
