--- a/app/src/main/res/layout/item_location_search.xml
+++ b/app/src/main/res/layout/item_location_search.xml
@@ -16,13 +16,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="8dp">
 
         <!-- Container flag -->
         <FrameLayout
             android:id="@+id/flag_container"
-            android:layout_width="40dp"
-            android:layout_height="30dp"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -33,7 +33,7 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@string/country_flag_description"
                 android:scaleType="fitXY"
-                android:src="@drawable/avatar_12" />
+                android:src="@drawable/ic_weather_gradient" />
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
                 android:id="@+id/loading_indicator"
@@ -56,7 +56,7 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="true"
             android:visibility="gone"
-            app:indicatorColor="?attr/colorPrimary"
+            app:indicatorColor="?attr/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/flag_container"
@@ -67,8 +67,8 @@
             android:id="@+id/location_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:gravity="start|center"
             android:lines="2"
